z-index fix on the navigation chevrons of products & redid hover animation on print button to look like live site

--- a/src/product-footer/style.scss
+++ b/src/product-footer/style.scss
@@ -5,7 +5,7 @@
 				position: absolute;
 				top: 0;
 				right: 0;
-				z-index: 5;
+				z-index: 1;
 				color: #555555;
 				text-decoration: none;
 				border: 1px solid white;
@@ -28,7 +28,7 @@
 				}
 			}
 			:first-child {
-				right: 41px;
+				right: 42px;
 
 				@include Responsive($mobileBreakpoint){
 					right: 30px;
